# sovereign-guardian-dojo

./: .gitignore  Package.resolved  Package.swift  converter.log.pre-fix  nohup.out
Sources/CLibOQS/: module.modulemap  shim.h
Sources/GuardianCLI/: GuardianCLI.swift
Sources/GuardianCore/: Exports.swift  LLMAgent.swift
Sources/GuardianDojo/: GuardianAgentFactory.swift  GuardianArenaEngine.swift  GuardianEvaluator.swift  GuardianEvolution.swift  GuardianLineage.swift  GuardianMutator.swift  GuardianRecord.swift  GuardianStorage.swift  GuardianTypes.swift  ImmutableRulesEnforcer.swift  PolicyOracle.swift  ThreatSimulator.swift
Sources/GuardianDojo/Resources/: benign_scenarios.txt  guardian_defender.txt  threat_patterns.json
Tests/GuardianCoreTests/: GuardianCoreTests.swift
Tests/GuardianDojoTests/: GuardianArenaTests.swift  GuardianEvaluatorTests.swift  GuardianEvolutionTests.swift  GuardianTypesTests.swift  ImmutableRulesTests.swift  ThreatSimulatorTests.swift
deploy/hardware/: m4-mac.toml
python/: feedback_to_dojo.py  moltbook_attack_extractor.py  moltbook_bridge.py  moltbook_monitor.py  moltbook_to_dojo.py  public_scam_bridge.py  public_scam_to_dojo.py  pyproject.toml  requirements.txt  world_data_bridge.py  world_data_to_dojo.py
python/guardian_dojo/: __init__.py  analyzer.py  visualizer.py
