[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "guardian-dojo"
version = "0.1.0"
description = "Analysis and visualization tooling for Sovereign Guardian Dojo"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
